@@ -3,6 +3,8 @@ package demo.scriptCore.scheduleClawing.jobInfo.service.impl;
 import java.io.BufferedReader;
 import java.io.InputStreamReader;
 import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.nio.charset.StandardCharsets;
 import java.time.LocalDateTime;
@@ -41,9 +43,11 @@ public class V2exJobInfoCollectionServiceImpl extends JobInfoCollectionCommonSer
 
 	@Override
 	public TestEventBO clawing(TestEventBO tbo) {
-		sendTelegramMsg("Start v2ex collecting");
+		sendingMsg("Start v2ex collecting");
+		log.error("Start v2ex collecting");
 		CommonResult r = new CommonResult();
 
+		log.error("Delete v2ex old urls");
 		deleteOldUrls(PARAM_PATH_STR);
 
 		ScheduleClawingType caseType = ScheduleClawingType.V2EX_JOB_INFO;
@@ -53,8 +57,10 @@ public class V2exJobInfoCollectionServiceImpl extends JobInfoCollectionCommonSer
 			FileUtilCustom ioUtil = new FileUtilCustom();
 			String content = ioUtil.getStringFromFile(PARAM_PATH_STR);
 
+			log.error("Building v2ex job info option DTO");
 			V2exJobInfoOptionDTO dto = buildObjFromJsonCustomization(content, V2exJobInfoOptionDTO.class);
 			if (dto == null) {
+				log.error("V2ex job info DTO error, content: " + content);
 				reportService.caseReportAppendContent(caseReport, "参数文件结构异常");
 				throw new Exception();
 			}
@@ -72,7 +78,7 @@ public class V2exJobInfoCollectionServiceImpl extends JobInfoCollectionCommonSer
 					}
 				}
 			} catch (Exception e) {
-				sendTelegramMsg("Hit error when collect data" + e.getLocalizedMessage());
+				sendingMsg("Hit error when collect data" + e.getLocalizedMessage());
 				reportService.caseReportAppendContent(caseReport,
 						"V2ex data collector error: " + e.getLocalizedMessage());
 				tbo.getReport().getCaseReportList().add(caseReport);
@@ -86,7 +92,7 @@ public class V2exJobInfoCollectionServiceImpl extends JobInfoCollectionCommonSer
 			r.setIsSuccess();
 
 		} catch (Exception e) {
-			sendTelegramMsg("Hit error when collect data" + e.getLocalizedMessage());
+			sendingMsg("Hit error when collect data" + e.getLocalizedMessage());
 			reportService.caseReportAppendContent(caseReport, "V2ex data collector error: " + e.getLocalizedMessage());
 			tbo.getReport().getCaseReportList().add(caseReport);
 		}
@@ -106,8 +112,8 @@ public class V2exJobInfoCollectionServiceImpl extends JobInfoCollectionCommonSer
 
 		URL url = null;
 		try {
-			url = new URL(urlStr);
-		} catch (MalformedURLException e) {
+			url = new URI(urlStr).toURL();
+		} catch (MalformedURLException | URISyntaxException e) {
 		}
 
 		StringBuffer htmlStrBuffer = new StringBuffer();
@@ -154,7 +160,7 @@ public class V2exJobInfoCollectionServiceImpl extends JobInfoCollectionCommonSer
 					tmpDTO.setRecrodDate(LocalDateTime.now());
 					tmpDTO.setUrl(tmpUrl);
 					newInfoUrlList.add(tmpDTO);
-					sendTelegramMsg("New url: " + mainUrlStr + tmpUrl + " , title: " + t.text());
+					sendingMsg("New url: " + mainUrlStr + tmpUrl + " , title: " + t.text());
 				}
 			}
 
@@ -206,7 +212,7 @@ public class V2exJobInfoCollectionServiceImpl extends JobInfoCollectionCommonSer
 					tmpDTO.setRecrodDate(LocalDateTime.now());
 					tmpDTO.setUrl(tmpUrl);
 					newInfoUrlList.add(tmpDTO);
-					sendTelegramMsg("New url: " + tmpUrl + " , title: " + ele.getText());
+					sendingMsg("New url: " + tmpUrl + " , title: " + ele.getText());
 				}
 			}
 
